#1 removed Orient